Changed top margin to padding to prevent unnecessary scrollbar display

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body {
 }
 
 .header {
-	margin-top: 25px;
+	padding-top: 25px;
 	margin-bottom: 15px;
 }
 
